----------------------------------------------------------------------
 OmegaT 3.1.6 
----------------------------------------------------------------------
   5 Enhancements
   5 Bug fixes
   3 Localisation update
----------------------------------------------------------------------
3.1.6 vs. 3.1.5

  Implemented requests:

  - Allow customising segment modification information 
  https://sourceforge.net/p/omegat/feature-requests/1022/

  - Automatically open last visited segment 
  https://sourceforge.net/p/omegat/feature-requests/35/

  - Memory for searched items
  https://sourceforge.net/p/omegat/feature-requests/176/

  Other enhancements:

  - Ctrl+Shift+M was added as a shortcut to "Go to selected match" 
  https://sourceforge.net/p/omegat/feature-requests/1009/

  - Protected parts tooltip view changes. In Options > View, paired tags 
can be removed from tooltip, text between paired tags can be bolded.
  
  Bug fixes:

    - Wrong font used in dictionary window
  https://sourceforge.net/p/omegat/bugs/706
  
  - Alt+Up/Down was set to Select Next Match and Select Previous Match on Mac OSX
  https://sourceforge.net/p/omegat/bugs/687/

  - The description of open_current_file.groovy was wrongly
"Open the current translated file". It was corrected to "Open the current source file"

  - The HTML filter had a different behaviour, where attributes were transformed into 
tags and could not be translated.

  - Multi-line notes in XLIFF files were not extracted correctly

  Localisation updates:

  - Dutch localisation updated to 3.1.5 (UI, readme, documentation, scripts)
  - Italian localisation updated to 3.1.5 (UI, readme)
  - Japanese localisation updated to 3.1.6 (UI)

----------------------------------------------------------------------
 OmegaT 3.1.5 (2014-08-13)
----------------------------------------------------------------------
   2 Enhancements
   4 Bug fixes
   0 Localisation update